agregando contenido al index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <1>REPASO GIT</1>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum ea molestias! Perferendis animi, porro modi iusto fuga temporibus dolore voluptates quia cumque at voluptate minima numquam omnis earum recusandae.
+    <4></4></P>
 </body>
 </html>
