agrege contenido en el html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <1>REPASO GIT</1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum ea molestias! Perferendis animi, porro modi iusto fuga temporibus dolore voluptates quia cumque at voluptate minima numquam omnis earum recusandae.
 </p>
+
+<h2>prueba 21/10</h2>
 </body>
 </html>
