--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <1>REPASO GIT</1>
+    <h1>REPASO GIT<h1/>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum ea molestias! Perferendis animi, porro modi iusto fuga temporibus dolore voluptates quia cumque at voluptate minima numquam omnis earum recusandae.
 </p>
+
+<h2>Agregue un H2 </h2>
+<h3>Agrege un h3</h3>
 
 <h2>prueba 21/10</h2>
 </body>
